--- a/index.html
+++ b/index.html
@@ -145,6 +145,17 @@
                     </div>
                 </div>
             </section>
+
+            <section id="delima-login" class="mb-20">
+                <div class="bg-emerald-600 p-8 rounded-xl shadow-lg text-center">
+                    <div class="text-6xl text-white mb-4">🚪</div>
+                    <h3 class="text-2xl font-bold text-white mb-2">Sedia untuk Mula?</h3>
+                    <p class="text-white mb-6">Log masuk ke portal DELIMa untuk mengakses Google Classroom dan semua aplikasi lain yang tersedia.</p>
+                    <a href="https://d2.delima.edu.my/" target="_blank" class="inline-block bg-white text-emerald-700 font-semibold px-6 py-3 rounded-full hover:bg-gray-100 transition duration-300">
+                        Log Masuk ke DELIMa
+                    </a>
+                </div>
+            </section>
             
             <section id="rumusan" class="bg-gray-800 text-white rounded-xl p-8 md:p-12 text-center">
                 <h2 class="text-3xl font-bold mb-4">Rumusan Bab</h2>
